# ChangeLog for dev-libs/libgdata
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/libgdata/ChangeLog,v 1.17 2010/10/14 21:00:35 maekke Exp $

  14 Oct 2010; Markus Meier <maekke@gentoo.org> libgdata-0.6.4.ebuild:
  arm stable, bug #324077

  07 Oct 2010; Samuli Suominen <ssuominen@gentoo.org> libgdata-0.6.4.ebuild:
  ppc64 stable wrt #314899

*libgdata-0.6.5 (04 Oct 2010)

  04 Oct 2010; Gilles Dartiguelongue <eva@gentoo.org>
  -libgdata-0.6.2.ebuild, +libgdata-0.6.5.ebuild, metadata.xml:
  Version bump. Disable tests requiring network access, bug #307725. Enable
  introspection bits. Fix some leaks.

  03 Oct 2010; Joseph Jezak <josejx@gentoo.org> libgdata-0.6.4.ebuild:
  Marked ppc stable.

  14 Aug 2010; Raúl Porcel <armin76@gentoo.org> libgdata-0.6.4.ebuild:
  alpha/ia64/sparc stable

  11 Aug 2010; Joseph Jezak <josejx@gentoo.org> libgdata-0.6.4.ebuild:
  Marked ~ppc for bug #313563.

  06 Jul 2010; Samuli Suominen <ssuominen@gentoo.org> libgdata-0.6.4.ebuild:
  Keyword ~ppc64 wrt #323845

  04 Jun 2010; Markus Meier <maekke@gentoo.org> libgdata-0.6.4.ebuild:
  x86 stable, bug #314899

  22 May 2010; Raúl Porcel <armin76@gentoo.org> libgdata-0.6.4.ebuild:
  Add ~arm

  22 May 2010; Raúl Porcel <armin76@gentoo.org> libgdata-0.6.4.ebuild:
  Add ~alpha/~ia64/~sparc wrt #313563

  03 May 2010; Olivier Crête <tester@gentoo.org> libgdata-0.6.4.ebuild:
  amd64 stable, bug #314899

*libgdata-0.6.4 (01 Apr 2010)

  01 Apr 2010; Gilles Dartiguelongue <eva@gentoo.org>
  -libgdata-0.5.1.ebuild, +libgdata-0.6.4.ebuild:
  Version bump. Fix, documentation/translation updates.

  01 Mar 2010; Gilles Dartiguelongue <eva@gentoo.org> libgdata-0.6.2.ebuild:
  Add preserve_old_lib calls since the soname changed.

*libgdata-0.6.2 (01 Mar 2010)

  01 Mar 2010; Gilles Dartiguelongue <eva@gentoo.org>
  -libgdata-0.5.0.ebuild, +libgdata-0.6.2.ebuild:
  Version bump. Enable all but failing tests.
