@@ -1,6 +1,11 @@
 # ChangeLog for dev-libs/libgdata
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/libgdata/ChangeLog,v 1.17 2010/10/14 21:00:35 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/libgdata/ChangeLog,v 1.18 2010/10/24 13:29:13 pacho Exp $
+
+  24 Oct 2010; Pacho Ramos <pacho@gentoo.org> libgdata-0.6.4.ebuild,
+  libgdata-0.6.5.ebuild:
+  Stop RDEPENDing on net-libs/libsoup[gnome] since it will be dropped in
+  favor of net-libs/libsoup-gnome (see bug #340293 for reference).
 
   14 Oct 2010; Markus Meier <maekke@gentoo.org> libgdata-0.6.4.ebuild:
   arm stable, bug #324077
